# gespin

./: .gitignore  CMakeLists.txt  README.md  __init__.py  plotting.py
inc/: Nucleon.h  NucleonCollection.h  PairwiseLikelihoods.h  SingleBodyLikelihoods.h
lib/: libgespin.dylib
src/: Nucleon.cpp  Nucleon.cxx  NucleonCollection.cpp  PairwiseLikelihoods.cpp  PythonDefinitions.cpp  SingleBodyLikelihoods.cpp
