SET(LIBRARY_NAME gespin)
AUX_SOURCE_DIRECTORY(src SOURCE_FILES)
ADD_LIBRARY(${LIBRARY_NAME} SHARED ${SOURCE_FILES})

INCLUDE_DIRECTORIES("inc")

SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  SET(CMAKE_CXX_COMPILER clang++)
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libstdc++")
ENDIF()

option(static "static" OFF)
IF(static)
    ADD_LIBRARY(${LIBRARY_NAME} STATIC ${SOURCE_FILES} ${INPUT_MODELS} ${FITNESS_FUNCTIONS})
    MESSAGE("Building static version of the library.")
ENDIF(static)

#don't add lib before the library
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES PREFIX "./")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF()

FIND_PACKAGE(Boost)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS python3)

  MESSAGE("Linking libraries" ${Boost_LIBRARIES})
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${Boost_LIBRARIES})
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  SET(PYTHON_LIBRARY /opt/local/Library/Frameworks/Python.framework/Versions/3.3/lib/libpython3.3.dylib)
  SET(PYTHON_INCLUDE_DIR /opt/local/Library/Frameworks/Python.framework/Versions/3.3/include/python3.3m)
ENDIF()

FIND_PACKAGE(PythonLibs 3.2)
IF(PYTHONLIBS_FOUND)
  INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${PYTHON_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "Unable to find PythonLibs.")
ENDIF()
